# dashboard

./: .env.example  .gitignore  compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/migration/: env.py
backend/migration/versions/: 5e46aa0fdc96_create_item_table.py  a04b47239556_create_users_table.py
backend/scripts/: entrypoint.sh
backend/src/dashboard/: api.py  config.py  database.py  main.py
backend/src/dashboard/auth/: dependencies.py  models.py  service.py  utils.py  views.py
backend/src/dashboard/item/: models.py  service.py  views.py
